kubernetes/dndevops/dndevops-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndevops-identity
  namespace: dndevops
  labels:
    app: dndevops-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dndevops-identity
  template:
    metadata:
      labels:
        app: dndevops-identity
    spec:
      containers:
        - name: dndevops-identity
          image: ghcr.io/roguebit2002/dndevops:0.0.1-dev
          ports:
            - containerPort: 8000
