kubernetes/dndevops/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: dndevops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.2.1-management # You can use any version you need
        ports:
        - containerPort: 5672
          name: "Default"
        - containerPort: 5671
          name: "TLS"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: dndevops
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: "Default"
    - protocol: TCP
      port: 5671
      targetPort: 5671
      name: "TLS"
  clusterIP: None  # Headless service
