kubernetes/dndevops/smtp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: mailpit/mailpit:latest
          ports:
            - containerPort: 1025  # SMTP Port
            #- containerPort: 8025  # HTTP Web UI Port
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-service
spec:
  selector:
    app: mailpit
  ports:
    - protocol: TCP
      port: 25       # Port to access SMTP
      targetPort: 1025  # Port inside the container
