kubernetes/dndevops/dndevops-game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndevops-game
  namespace: dndevops
  labels:
    app: dndevops-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dndevops-game
  template:
    metadata:
      labels:
        app: dndevops-game
    spec:
      containers:
        - name: dndevops-game
          image: ghcr.io/roguebit2002/dndevops:0.0.1-dev
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dndevops-game-service
  namespace: dndevops
spec:
  selector:
    app: dndevops-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: "http"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dndevops-game-ingress
  namespace: dndevops
spec:
  rules:
    - http:
        paths:
          - path: /api/game
            pathType: Prefix
            backend:
              service:
                name: dndevops-game-service
                port:
                  number: 80
